--- a/src/pages/about-us.pug
+++ b/src/pages/about-us.pug
@@ -1,7 +1,7 @@
 doctype html
 head
   meta(charset='utf-8')
-  title Contact us
+  title About us
   meta(name='viewport', content='initial-scale=1')
   link(rel='stylesheet', type='text/css', href='styles/main.css')
 section.header
