--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -4,7 +4,7 @@ head
   title Wapik
   meta(name='viewport', content='initial-scale=1')
   link(rel='stylesheet', type='text/css', href='styles/main.css')
-section.header
+section.header.header-dark-bg
   .container.header__content
     .header__left
         .header__company-name Wapik
@@ -12,17 +12,17 @@ section.header
             span.header__phone-icon &#xf4b9;
             |+62 202 555 0117
     .header__right
-        .header__navigation.navigation
-        ul.navigation
-            li.navigation__item
-                a.link(href='index.html') Home
-            li.navigation__item
-                a.link(href='about-us.html') About us
-            li.navigation__item
-                a.link(href='pricing.html') Pricing
-            li.navigation__item
-                a.link(href='contact-us.html') Contact us
-        button.header__get-started-button.button(name='Get started',value='Get started') Get started
+        .header__navigation
+            ul.navigation.navigation-light
+                li.navigation__item
+                    a.link(href='index.html') Home
+                li.navigation__item
+                    a.link(href='about-us.html') About us
+                li.navigation__item
+                    a.link(href='pricing.html') Pricing
+                li.navigation__item
+                    a.link(href='contact-us.html') Contact us
+                button.header__get-started-button.button(name='Get started',value='Get started') Get started
 section.masthead
     .container.masthead__content
         .masthead__caption
@@ -115,8 +115,8 @@ section.pricing
                     .plan__option Cras Inceptos
                 button.plan__select-button.button(name="Select plan", value="Select plan") Select plan
             .pricing__plan.plan
-                .plan__header Basic
-                .plan__price $199
+                .plan__header Plus
+                .plan__price $399
                 .plan__duration /month
                 .plan__options
                     .plan__option Justo Fringilla
@@ -125,8 +125,8 @@ section.pricing
                     .plan__option Cras Inceptos
                 button.plan__select-button.button(name="Select plan", value="Select plan") Select plan
             .pricing__plan.plan
-                .plan__header Basic
-                .plan__price $199
+                .plan__header Premium
+                .plan__price $699
                 .plan__duration /month
                 .plan__options
                     .plan__option Justo Fringilla
@@ -134,20 +134,21 @@ section.pricing
                     .plan__option Ultricies Purus Amet
                     .plan__option Cras Inceptos
                 button.plan__select-button.button(name="Select plan", value="Select plan") Select plan
-        .pricing__addons.addons
-            .section__heading
-                .section__title.addons__title Included with all Plans
-                .section__underline.addons__underline
-            .addons__description
-                .addons__item Maecenas faucibus mollis interdum
-                .addons__item Vestibulum id ligula porta felis euismod
-                .addons__item Nulla vitae elit libero, a pharetra augue
-                .addons__item Cras justo odio, dapibus ac facilisis
-                .addons__item Duis mollis, est non commodo luctus
-                .addons__item Curabitur blandit tempus porttitor
-                .addons__item Fringilla Mattis
-                .addons__item Integer posuere
-                .addons__item Nullam quis risus eget urna mollis 
+section.addons
+    .container.addons__content
+        .section__heading
+            .section__title.addons__title Included with all Plans
+            .section__underline.addons__underline
+        .addons__description
+            .addons__item Maecenas faucibus mollis interdum
+            .addons__item Vestibulum id ligula porta felis euismod                
+            .addons__item Nulla vitae elit libero, a pharetra augue
+            .addons__item Cras justo odio, dapibus ac facilisis
+            .addons__item Duis mollis, est non commodo luctus
+            .addons__item Curabitur blandit tempus porttitor
+            .addons__item Fringilla Mattis
+            .addons__item Integer posuere
+            .addons__item Nullam quis risus eget urna mollis 
 section.contact-us
     .container.contact-us__content
         .section__heading.contact-us__heading
@@ -199,14 +200,14 @@ section.footer
 
             form.footer__email-field(action="")
                 input.footer__email.link(type="email", placeholder="Enter Email", id="email")
-                label.footer__email-submit-button
-                    a.link(href="") &#xf473;
+                
+                button.footer__email-submit-button &#xf473;
 section.copyright
     .container.copyright__content
         .copyright__caption All rights reserved 2015.
         .copyright__socials.socials
-            a.link.socials__item.twitter(href="http://twitter.com") &#xf243;
-            a.link.socials__item.facebook(href="http://facebook.com") &#xf231;
-            a.link.socials__item.instagram(href="http://instagram.com") &#xf351;
-            a.link.socials__item.dribbble(href="http://dribbble.com") &#xf22c;
-            a.link.socials__item.github(href="http://github.com") &#xf4e8;
+            a.link.socials__item.twitter(href="http://twitter.com", title="Our Twitter") &#xf243;
+            a.link.socials__item.facebook(href="http://facebook.com", title="Our Facebook") &#xf231;
+            a.link.socials__item.instagram(href="http://instagram.com", title="Our Instagram") &#xf351;
+            a.link.socials__item.dribbble(href="http://dribbble.com", title="Our Dribbble") &#xf22c;
+            a.link.socials__item.github(href="http://github.com", title="Our Github") &#xf4e8;
