--- a/src/styles/contact-us.scss
+++ b/src/styles/contact-us.scss
@@ -1,11 +1,3 @@
-.header-contact-page{
-    // background: $main-bg-color;
-}
-.navigation{
-    &__item {
-        
-    }
-}
 .masthead-map{
     &__content{
         width: 100%;
@@ -35,12 +27,17 @@
         padding: 16px 0 16px 20px;
         width: 100%;
         margin-bottom: 25px;
+        outline: none;
     }
-    &__send-message-button:hover{
-        box-sizing: border-box;
-        border: 2px solid rgb(111, 176, 72);
-        color: rgb(111, 176, 72);
-        font-weight: bold;
+    &__send-message-button{
+        &_green{
+            background-color: rgb(111, 176, 72);
+        }
+        &_green:hover{
+            border: 2px solid rgb(111, 176, 72);
+            color: rgb(111, 176, 72);
+            background-color: transparent;
+        }
     }
     .headquarter{
         width: 30%;
